k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infra-stack-lab
  labels:
    app.kubernetes.io/name: infra-stack-lab
    app.kubernetes.io/part-of: infra-stack-lab
