k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: infra-stack-lab-api-service
  namespace: infra-stack-lab
  labels:
    app.kubernetes.io/name: infra-stack-lab
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: infra-stack-lab
    app.kubernetes.io/component: api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
