k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infra-stack-lab-ingress
  namespace: infra-stack-lab
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: infra-stack-lab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: infra-stack-lab-api-service
                port:
                  number: 3000
